# VideoCompare

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.MD  conanfile.py  icon.rc  main.cpp
